--- a/Lab1-UI/src/main/AndroidManifest.xml
+++ b/Lab1-UI/src/main/AndroidManifest.xml
@@ -22,6 +22,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".PersonalDataActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".ContactDataActivity"
+            android:exported="false" />
+
+
     </application>
 
 </manifest>
