--- a/Lab1-UI/src/main/AndroidManifest.xml
+++ b/Lab1-UI/src/main/AndroidManifest.xml
@@ -25,11 +25,13 @@
 
         <activity
             android:name=".PersonalDataActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:configChanges="orientation|screenSize|keyboardHidden" />
 
         <activity
             android:name=".ContactDataActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:configChanges="orientation|screenSize|keyboardHidden" />
 
 
     </application>
